# my-lecture-memo

./: .pre-commit-config.yaml  main.py  pyproject.toml
source/: basic_design.md  conf.py  detailed_design.md  index.md  index.rst  requirements.md
source/_static/: custom.css
