[project]
name = "my-lecture-memo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "furo>=2025.7.19",
    "myst-parser>=4.0.1",
    "pre-commit>=4.3.0",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-diagrams>=0.4.0",
    "sphinx-markdown-tables>=0.0.17",
    "sphinxcontrib-mermaid>=1.0.0",
]
